[metadata]
name = turingpoint
version = attr: turingpoint.__version__
author = Oren Zeev-Ben-Mordehai
author_email = zbenmo@gmail.com
url = https://github.com/zbenmo/turingpoint
description = Reinforcement Learning (RL) library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Reinforcement Learning, Framework, Integration
license_files = LICENSE.txt
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    tqdm

[options.extras_require]
examples_sb3 =
    gymnasium >= 0.28.1
    stable-baselines3[extra] >= 2.0.0a5, < 2.1
    pettingzoo[classic, batterfly] >= 1.22.3, < 1.23
    pymunk
    tianshou >= 0.5.0, < 0.6
    numpy

examples_torch =
    gymnasium[box2d, atari, accept-rom-licesnse]
    ale-py
    numpy


[options.package_data]
* = README.md